--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,18 +1,22 @@
 .nav--main {
-  height: 4rem;
-  background-image: linear-gradient(to right, #9ff0af, #dcf0e0);
+  height: 40vh;
+  /* background-image: linear-gradient(to right, #9ff0af, #dcf0e0); */
   display: flex;
-  align-items: center;
+  align-items: flex-end;
+  background-image: url("../images/pilgrimZiggy.jpeg");
+  background-size: cover;
+  background-position: center 80%;
+  background-repeat: no-repeat;
 }
 .nav--icons {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: space-between;
   width: 100vw;
   list-style-type: none;
 }
 img.nav--logo {
-  height: 3.5rem;
+  height: 30vh;
 }
 .nav--group {
   display: flex;
@@ -20,7 +24,5 @@ img.nav--logo {
 }
 .nav--icon {
   margin-inline: 0.5rem;
-  border-radius: 33%;
   padding: 0.5rem;
-  background-color: white;
 }
