--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -16,9 +16,67 @@
   font-size: smaller;
   width: 20vw;
 }
+
 .home--break {
   width: 100vw;
+  /* background-color: aqua; */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-image: linear-gradient(white, aqua);
+}
+.home--extras {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-block: 1rem;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.249);
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: rgb(70, 253, 253);
+  padding: 0.5rem;
   height: 20vh;
+}
+.home--extras:active {
+  transform: scale(0.98);
+  box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.249);
+}
+.home--extras > img {
+  border-radius: 5px;
+  height: 15vh;
+  width: 10vw;
+}
+.extras--thumb {
+  height: 15vh;
+  width: auto;
+}
+.extras--text {
+  margin-left: 1rem;
+}
+.break--block {
+  width: 50%;
+  margin: 2rem;
+}
+.home--links {
+  display: flex;
+  justify-content: space-evenly;
   background-color: aqua;
-  margin-top: 2rem;
+  padding-bottom: 2rem;
+}
+.links--img {
+  border-radius: 3px;
+  height: 15vh;
+  width: 10vw;
+}
+.home--links > div {
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
+  text-align: center;
+  padding: 1rem;
+  cursor: pointer;
+  width: 20vw;
+}
+.home--links > div:active {
+  transform: scale(0.98);
+  box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.249);
 }
