--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,10 +1,64 @@
+.about--title {
+  text-align: center;
+}
 .about--main {
   width: 70vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  margin: auto;
+  padding: 3rem;
 }
 .about--top {
   display: flex;
-  margin: 3rem;
+  margin-top: 2rem;
+}
+.about--img {
+  height: 100%;
+  margin-top: 3rem;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
+}
+.about--text-left {
+  margin-right: 3rem;
+  font-size: large;
+  line-height: 1.75rem;
+}
+.about--text-right {
+  margin-left: 3rem;
+  font-size: large;
+  line-height: 1.75rem;
+}
+.about--visit {
+  border: 1px red solid;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  background-color: darkgreen;
+}
+.visit--block {
+  width: 50%;
+  display: flex;
+}
+.visit--text {
+  border: 1px solid red;
+  padding: 2rem;
+  width: 50%;
+}
+.visit--text > p {
+  font-weight: 300;
+  line-height: 2rem;
+  font-size: larger;
+}
+.visit--links {
+  border: 1px solid blue;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.visit--links > p {
+  font-size: x-large;
+  margin: 2rem;
 }
