links planned and mostly set up, home tweaks

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -39,6 +39,7 @@
   padding: 0.5rem;
   color: white;
   margin-right: 2rem;
+  text-decoration: none;
 }
 .nav--volunteer {
   background-color: rgb(152, 144, 74);
