--- a/src/pages/Donate/Donate.css
+++ b/src/pages/Donate/Donate.css
@@ -10,6 +10,16 @@
   flex-direction: column;
   align-items: center;
 }
+.donate--main > h1 {
+  font-size: large;
+  width: 30vw;
+  margin-bottom: 5rem;
+  font-style: italic;
+  background-color: #660033;
+  padding: 2rem;
+  border-radius: 5px;
+  color: whitesmoke;
+}
 .main--text {
   display: flex;
   justify-content: space-between;
@@ -19,4 +29,55 @@
   background-color: olivedrab;
   padding: 2rem;
   border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
+  position: relative;
+  width: 60vw;
+}
+.main--list > h2 {
+  margin-left: 2rem;
+  font-size: x-large;
+}
+.list--body {
+  display: flex;
+  align-items: center;
+  margin-left: 2rem;
+  padding: 2rem;
+}
+.list--body > img {
+  height: 40vh;
+  margin-left: 2rem;
+  border-radius: 5px;
+  position: absolute;
+  left: 30vw;
+  bottom: 2rem;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
+}
+.list {
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  background-color: whitesmoke;
+  padding: 1rem;
+  list-style: none;
+}
+.list--item {
+  padding-block: 1.5rem;
+  font-size: larger;
+  font-weight: 500;
+}
+
+.main--details {
+  display: flex;
+  margin-top: 3rem;
+}
+.details--text {
+  border: 1px solid red;
+  width: 50%;
+  padding: 2rem;
+  font-size: large;
+  font-weight: 400;
+  line-height: 2.25rem;
+}
+.details--donate {
+  border: 1px solid blue;
+  width: 50%;
 }
