--- a/src/components/Modals/Guidelines.css
+++ b/src/components/Modals/Guidelines.css
@@ -1,7 +1,10 @@
 .modal--body {
   position: absolute;
-  top: 50%;
+  top: 10%;
   left: 50%;
   border: 2px solid black;
   background-color: whitesmoke;
+  overflow-y: scroll;
+  padding: 2rem;
+  width: 40vw;
 }
