--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,3 +1,28 @@
 .footer--main {
   height: 30vh;
+  background-color: grey;
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.main--info {
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem;
+  height: 60%;
+  width: 60%;
+}
+.info--block {
+}
+.main--links {
+  display: flex;
+  justify-content: space-between;
+  margin-inline: 1rem;
+}
+.links {
+  display: flex;
+}
+.links--block {
+  padding-inline: 1rem;
 }
