--- a/src/pages/Donate/donate.module.css
+++ b/src/pages/Donate/donate.module.css
@@ -35,7 +35,8 @@
 }
 .main--list > h2 {
   margin-left: 2rem;
-  font-size: x-large;
+  font-size: xx-large;
+  text-align: center;
 }
 .list--body {
   display: flex;
