--- a/src/pages/Volunteer/volunteer.module.css
+++ b/src/pages/Volunteer/volunteer.module.css
@@ -42,6 +42,9 @@
   font-weight: 300;
   line-height: 2.25rem;
 }
+.body--buttons {
+  display: flex;
+}
 .body--photos {
   width: 100%;
   margin: auto;
