--- a/src/components/VolunteerForm/form.module.css
+++ b/src/components/VolunteerForm/form.module.css
@@ -26,3 +26,15 @@
 .body--header {
   margin: 2rem;
 }
+.form--inputs {
+  display: flex;
+  flex-direction: column;
+}
+.form--input {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.input--week {
+  display: flex;
+}
